Make index.html as entry pont for the app and add a button to navigate main Heart Signal service

--- a/svelte-frontend/index.html
+++ b/svelte-frontend/index.html
@@ -1,10 +1,12 @@
+<!-- ./index.html -->
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/heartman.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>하트시그널 - 당신의 심장에 귀기울여보세요</title>
+    <link rel="stylesheet" href="./public/global.css">
   </head>
   <body>
     <div id="app"></div>
