change the path of global.css file as being in public/

--- a/svelte-frontend/index.html
+++ b/svelte-frontend/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" type="image/svg+xml" href="/heartman.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>하트시그널 - 당신의 심장에 귀기울여보세요</title>
-    <link rel="stylesheet" href="./public/global.css">
+    <!-- public/ 기준으로 경로 지정 -->
+    <link rel="stylesheet" href="./global.css"> 
   </head>
   <body>
     <div id="app"></div>
