--- a/svelte-frontend/index.html
+++ b/svelte-frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>하트시그널 - 당신의 심장에 귀기울여보세요</title>
     <!-- public/ 기준으로 경로 지정 -->
-    <link rel="stylesheet" href="./global.css"> 
+    <link rel="stylesheet" href="public/global.css"> 
   </head>
   <body>
     <div id="app"></div>
