--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>하트시그널 - 당신의 심장에 귀기울여보세요</title>
     <!-- public/ 기준으로 경로 지정 -->
     <link rel="stylesheet" href="public/global.css"> 
+    <link rel="stylesheet" href="public/brand.css">
   </head>
   <body>
     <div id="app"></div>
