--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- public/ 기준으로 경로 지정 -->
     <link rel="stylesheet" href="public/global.css"> 
     <link rel="stylesheet" href="public/brand.css">
+    <meta property="og:image" content="/heartman.webp" />
   </head>
   <body>
     <div id="app"></div>
