--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="public/global.css"> 
     <link rel="stylesheet" href="public/brand.css">
     <meta property="og:image" content="/heartman.webp" />
+    <meta property="og:title" content="하트시그널 - 당신의 심장에 귀기울여보세요">
+    <meta property="og:description" content="하트시그널은 여러분의 심장을 모니터링할 수 있도록 돕습니다.">
   </head>
   <body>
     <div id="app"></div>
