Change metadatas written in Korean into English

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/heartman.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>하트시그널 - 당신의 심장에 귀기울여보세요</title>
+    <title>HeartSignal - Listen to Your Heart</title>
     <!-- public/ 기준으로 경로 지정 -->
     <link rel="stylesheet" href="public/global.css"> 
     <link rel="stylesheet" href="public/brand.css">
     <meta property="og:image" content="/heartman.webp" />
-    <meta property="og:title" content="하트시그널 - 당신의 심장에 귀기울여보세요">
-    <meta property="og:description" content="하트시그널은 여러분의 심장을 모니터링할 수 있도록 돕습니다.">
+    <meta property="og:title" content="HeartSignal - Listen to Your Heart">
+    <meta property="og:description" content="HeartSignal helps you to monitor your heart.">
   </head>
   <body>
     <div id="app"></div>
